--- a/flexbox.html
+++ b/flexbox.html
@@ -45,7 +45,7 @@
         </div>
         <!-- Akhir Isi -->
 
-        <!-- Property untuk flex -->
+        <!-- Property untuk container -->
         <div class="property">
             <h2>Property pada container</h2>
             <img src="img/flexbox3.jpg" alt="container" width="400px">
@@ -119,7 +119,64 @@
                 </li>
             </ul>
         </div>
-        <!-- Akhir property untuk flex -->
+        <!-- Akhir property untuk container -->
+
+        <!-- Property pada items -->
+        <div class="property items">
+            <h2>Property pada items</h2>
+            <img src="img/items2.jpg" alt="items" width="350px">
+            <ul>
+                <li>
+                    <h3>Order</h3>
+                    <img src="img/order.jpg" alt="order" width="350px">
+                    <pre>.satu { order: 2; }
+.dua { order: 3; }
+.tiga { order: 4; }
+.empat { order: 1; }</pre>
+                    <p>Order berguna untuk mengatur urutan dari elemen-elemen.</p>
+                    <a href="ItemsProperty/oder.html" target="blank">Lihat Contoh <i
+                            class="uil uil-angle-double-right"></i></a>
+                </li>
+                <li>
+                    <h3>Flex-grow/flex</h3>
+                    <img src="img/flex-grow.jpg" alt="flex-grow" width="350px">
+                    <pre>.satu { flex-grow: 1; }
+.dua { flex-grow: 3; }
+.tiga { flex-grow: 1; }
+.empat { flex-grow: 1; }</pre>
+                    <p>flex-grow/flex memiliki shorthand flex. flex-grow berguna untuk mengatur ukuran dari items.</p>
+                    <a href="ItemsProperty/flex-grow.html" target="blank">Lihat Contoh <i
+                            class="uil uil-angle-double-right"></i></a>
+                </li>
+                <li>
+                    <h3>align-self</h3>
+                    <img src="img/align-self.jpg" alt="align-self" width="350px">
+                    <pre class="khusus">.item { 
+    align-self: auto | flex-start | flex-end | center | baseline | stretch; 
+}</pre>
+                    <p>align-self berguna untuk mengatur perilaku penjajaran sebuah item
+                        yang spesifik terhadap cross axis atau mengatur salah satu posisi dari item yang ingin diubah
+                        posisinya.</p>
+                    <a href="ItemsProperty/flex-grow." target="blank">Lihat Contoh <i
+                            class="uil uil-angle-double-right"></i></a>
+                </li>
+                <li>
+                    <h3></h3>
+                    <img src="" alt="">
+                    <pre></pre>
+                    <p></p>
+                    <a href=""></a>
+                </li>
+                <li>
+                    <h3></h3>
+                    <img src="" alt="">
+                    <pre></pre>
+                    <p></p>
+                    <a href=""></a>
+                </li>
+            </ul>
+        </div>
+        <!-- Property pada items -->
     </div>
 </body>
 
